Change content flex styling to look correct on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
     min-height: 100vh;
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 5fr;
     background: var(--bg-color);
 }
 
@@ -81,10 +81,9 @@ ul {
 .content {
     display: flex;
     gap: 2rem;
-    width: 100%;
-    height: 100%;
     justify-content: center;
     align-items: center;
+    height: min-content;
     padding: 1rem;
 }
 
@@ -93,8 +92,8 @@ ul {
     background: var(--light-color);
     padding: 1rem;
     border-radius: 1rem;
-    height: 80%;
     width: auto;
+    height: 20rem;
     min-width: 14rem;
     display: flex;
     justify-content: center;
@@ -103,8 +102,8 @@ ul {
 
 img {
     border: 2px solid #000000;
-    width: auto;
-    height: 80%;
+    width: 20rem;
+    height: auto;
     border-radius: 1rem;
     background: var(--light-color);
 }
